# Spark

./: .gitignore  CMakeLists.txt  README.md
grammar/: expr.ebnf
spark-lang/: assignment.spk  expressions.spk  minus.spk  statements.spk  test.spk  token_test.spk  variable.spk
src/: CMakeLists.txt  keywords.h  literals.h  main.c  scanner.c  scanner.h  token.c  token.h  token_list.h
src/interpreter/: ast_interpreter.c  ast_interpreter.h  expressions.h  lexer.c  lexer.h  parser.c  parser.h  printer.c  statements.h  token.c  token.h
src/lexer/: lexer.c  lexer.h
src/parser/: expressions.h  parser.c  parser.h  printer.c  printer.h
src/utils/: darray.c  darray.h  stacktrace.h  utils.h
